[package]
name = "cargo-ab-lint"
version = "0.1.2"
edition = "2024"
description = "CLI with extra lints for rust projects"
repository = "https://github.com/alexheretic/cargo-ab-lint"
keywords = ["lints"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.70"
cargo_metadata = "0.19"
cargo_toml = "0.22"
colored = "3"
diff = "0.1.13"
fs-err = "3"
toml_edit = "0.22.14"

[profile.release]
lto = true
opt-level = "s"
strip = true
